--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
+    "util": "^0.12.1",
     "youch": "^2.0.10",
     "yup": "^0.28.0"
   }
